# test_effective_mobile

./: .gitignore  README.md  config.py  main.py  pyproject.toml
database/: __init__.py  data_manager.py  json_manager.py
tests/: conftest.py  test_library.py
