[tool.poetry]
name = "test-effective-mobile"
version = "0.1.0"
description = ""
authors = ["Memorizu <kaidohmary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
